--- a/ThinkWhat/UI/Storyboards/Auth.storyboard
+++ b/ThinkWhat/UI/Storyboards/Auth.storyboard
@@ -1016,7 +1016,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="Vze-cD-6tx"/>
         <segue reference="h1h-Jz-9YR"/>
-        <segue reference="INB-gA-bu8"/>
+        <segue reference="oO1-ii-gCi"/>
         <segue reference="bec-WO-31D"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
