--- a/ThinkWhat/UI/Storyboards/App.storyboard
+++ b/ThinkWhat/UI/Storyboards/App.storyboard
@@ -39,9 +39,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.75294117650000003" green="0.24313725489999999" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="selectedImageTintColor" red="0.51751525644923846" green="0.37526487262672981" blue="0.50237096238985202" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" red="0.51764705882352935" green="0.37647058823529411" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="unselectedItemTintColor">
+                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
                         <segue destination="xDM-Px-ZLz" kind="show" identifier="BACK_TO_AUTH" id="Al7-dN-UxY"/>
@@ -196,13 +201,16 @@
                                         <color key="backgroundColor" red="0.75294117650000003" green="0.24313725489999999" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <viewLayoutGuide key="safeArea" id="qJh-dC-pPb"/>
                                         <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="18"/>
-                                        <state key="normal" title="СОЗДАТЬ"/>
+                                        <state key="normal" title="СОЗДАТЬ">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="createTapped:" destination="tGC-fm-Vl1" eventType="touchUpInside" id="9Qk-Ej-pXS"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="bdg-c3-Vgs" firstAttribute="height" secondItem="QfI-AY-itt" secondAttribute="height" multiplier="0.8" id="7Tc-eI-5ay"/>
                                     <constraint firstItem="bdg-c3-Vgs" firstAttribute="width" secondItem="QfI-AY-itt" secondAttribute="width" multiplier="0.6" id="h7N-uB-MZI"/>
@@ -214,7 +222,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yma-FX-IbZ">
                                 <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <color key="separatorColor" red="0.87411216000000003" green="0.88034469839999996" blue="0.89904231359999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="separatorColor" red="0.87450980392156863" green="0.8784313725490196" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="category" rowHeight="50" id="rzj-t5-64U" customClass="CategorySelectionCell" customModule="ThinkWhat" customModuleProvider="target">
@@ -1043,12 +1051,13 @@
                         <outlet property="topIcon" destination="wSS-w5-vdP" id="Jgr-yZ-gMM"/>
                         <outlet property="unknownIcon" destination="adL-Sm-3qf" id="fxT-2e-HwS"/>
                         <segue destination="0xn-mg-P9J" kind="show" identifier="FEED_TO_CATEGORY" id="VhV-81-Vwo"/>
-                        <segue destination="0vW-6a-SEh" kind="show" identifier="FEED_TO_SURVEY" id="YSd-24-xqI"/>
+                        <segue destination="0vW-6a-SEh" kind="custom" identifier="FEED_TO_SURVEY" customClass="SegueFromTop" customModule="ThinkWhat" customModuleProvider="target" id="YSd-24-xqI"/>
+                        <segue destination="Qne-Rz-6Rk" kind="show" identifier="FEED_TO_USER" id="d8f-vM-p00"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w0q-JQ-tvw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="570" y="132.04225352112675"/>
+            <point key="canvasLocation" x="570" y="133"/>
         </scene>
         <!--Survey View Controller-->
         <scene sceneID="TF6-fp-aMA">
@@ -1101,9 +1110,9 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottomMargin" secondItem="G2t-jI-wC8" secondAttribute="bottom" id="7f8-AU-LN4"/>
+                                        <constraint firstItem="G2t-jI-wC8" firstAttribute="leading" secondItem="neN-Cp-aQb" secondAttribute="leading" constant="16" id="Ase-te-iDQ"/>
                                         <constraint firstItem="G2t-jI-wC8" firstAttribute="top" secondItem="neN-Cp-aQb" secondAttribute="topMargin" id="BTS-X4-qbz"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="G2t-jI-wC8" secondAttribute="trailing" id="pCY-A5-zRX"/>
-                                        <constraint firstItem="G2t-jI-wC8" firstAttribute="leading" secondItem="neN-Cp-aQb" secondAttribute="leadingMargin" id="tyh-Pw-StH"/>
+                                        <constraint firstAttribute="trailing" secondItem="G2t-jI-wC8" secondAttribute="trailing" constant="16" id="Jjq-pt-hYW"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1288,10 +1297,10 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstItem="wOU-9b-ywp" firstAttribute="leading" secondItem="2wd-9j-zFi" secondAttribute="leadingMargin" id="FuL-GE-Svk"/>
                                         <constraint firstItem="wOU-9b-ywp" firstAttribute="centerY" secondItem="2wd-9j-zFi" secondAttribute="centerY" id="OAC-V7-Rj0"/>
                                         <constraint firstItem="hTF-rn-oFS" firstAttribute="top" secondItem="2wd-9j-zFi" secondAttribute="topMargin" id="T1e-yZ-OZr"/>
                                         <constraint firstItem="hTF-rn-oFS" firstAttribute="leading" secondItem="wOU-9b-ywp" secondAttribute="trailing" constant="8" id="g8I-sU-F3e"/>
+                                        <constraint firstItem="wOU-9b-ywp" firstAttribute="leading" secondItem="2wd-9j-zFi" secondAttribute="leading" constant="16" id="olx-Qi-N8y"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="hTF-rn-oFS" secondAttribute="bottom" id="pTh-1V-ESV"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="hTF-rn-oFS" secondAttribute="trailing" id="r8b-9h-pVB"/>
                                     </constraints>
@@ -1472,6 +1481,9 @@
                     </tableView>
                     <nil key="simulatedBottomBarMetrics"/>
                     <size key="freeformSize" width="320" height="1500"/>
+                    <connections>
+                        <segue destination="Qne-Rz-6Rk" kind="show" identifier="SURVEY_TO_USER" id="a89-Iq-3Go"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Ku-mw-1S0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1572,22 +1584,22 @@
                                         <rect key="frame" x="0.0" y="9" width="320" height="163.5"/>
                                         <subviews>
                                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l5G-ph-ezo">
-                                                <rect key="frame" x="105.5" y="0.0" width="109" height="109"/>
+                                                <rect key="frame" x="106" y="0.0" width="108" height="107.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="l5G-ph-ezo" secondAttribute="height" multiplier="1:1" id="wc8-yw-uzc"/>
                                                 </constraints>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="F09-Ez-ImL">
-                                                <rect key="frame" x="107" y="114" width="106" height="49.5"/>
+                                                <rect key="frame" x="107" y="112.5" width="106" height="51"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Alex Turner" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="QqS-fO-Rej">
-                                                        <rect key="frame" x="0.0" y="0.0" width="106" height="24.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="106" height="26"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="19"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="мужчина, 32 года" textAlignment="center" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="TaN-q5-kik">
-                                                        <rect key="frame" x="0.0" y="32.5" width="106" height="17"/>
+                                                        <rect key="frame" x="0.0" y="34" width="106" height="17"/>
                                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="12"/>
                                                         <textInputTraits key="textInputTraits"/>
@@ -1745,6 +1757,21 @@
             </objects>
             <point key="canvasLocation" x="1382" y="1613"/>
         </scene>
+        <!--User View Controller-->
+        <scene sceneID="OJr-CC-Sf3">
+            <objects>
+                <viewController id="Qne-Rz-6Rk" customClass="UserViewController" customModule="ThinkWhat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bsz-tj-h3V">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="krt-Oc-egH"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gc2-Nq-h2Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1382" y="882"/>
+        </scene>
     </scenes>
     <resources>
         <image name="PieIcon" width="32" height="32"/>
@@ -1752,6 +1779,7 @@
         <image name="ic_profile" width="20" height="21"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="d8f-vM-p00"/>
         <segue reference="YSd-24-xqI"/>
         <segue reference="ekf-Db-gyY"/>
     </inferredMetricsTieBreakers>
